Apply Java 25 idioms, fix logback version skew, and use nanoTime for timing
Use System.nanoTime() for elapsed time measurement in OsqueryService,
parallelize temperature queries with virtual threads, upgrade logback-classic
to match logback-core 1.5.29, and apply IntelliJ inspections: getFirst/getLast,
Jackson 3 asString(), package-private main methods, and safer shell scripts.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>